# palautusrepositorio

./: README.md
viikko2/nhl-reader/src/: __init__.py  player.py  player_reader.py  player_stats.py  players.py
viikko2/poetry-web/: pyproject.toml
viikko3/hello-robot/: log.html  output.xml  report.html
viikko3/hello-robot/src/: CounterLibrary.py
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/mock-demo/tests/: kauppa_test.py
viikko4/verkkokauppa/: .coverage  .coveragerc
viikko4/verkkokauppa/src/: ostoskori.py  varasto.py
viikko4/verkkokauppa/src/tests/: kauppa_test.py  varasto_test.py  viitegeneraattori_test.py
viikko5/: review.md
viikko5/tennis/: .gitignore
viikko5/tennis/src/: tennis_game.py
